--- a/css/food.css
+++ b/css/food.css
@@ -103,6 +103,11 @@ header a:hover::after {
     
 }
 
+element.style {
+    width: 150px;
+    height: 150px;
+}
+
 #add {
     height: 35px;
     margin-top: 100px;
